--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "apollo-link-context": "^1.0.20",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
